--- a/Tela-Registro/Tela-Registro.css
+++ b/Tela-Registro/Tela-Registro.css
@@ -137,3 +137,20 @@ outline: none;
     border: 3px solid #ffffff;
     border-radius: 20px;
   }
+.modal_termos{
+    display: none; /* Escondido por padrão */
+    position: fixed; /* Fica fixo na tela */
+    z-index: 1; /* Fica acima de outros elementos */
+    left: 0;
+    top: 0;
+    width: 100%; /* Largura total */
+    height: 100%; /* Altura total */
+    overflow: auto; /* Ativa o scroll se necessário */
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semitransparente */
+}
+.conteudo_modal{
+    background-color: #fff;
+    margin: 15% auto; /* 15% do topo e centraliza */
+    width: 80%; /* Largura do modal */
+    
+}
