--- a/Tela-produtos-oakley/Oakley Teeth Blue Grey/Oakley Teeth Blue Grey.css
+++ b/Tela-produtos-oakley/Oakley Teeth Blue Grey/Oakley Teeth Blue Grey.css
@@ -1,15 +1,15 @@
-
-Container-Principal {
-    display: flex; 
-    flex-direction: column; /* Define a direção dos itens como coluna */
-    height: 100vh; /* Define a altura do container como 100% da altura */
-    width: 100%; /* Define a largura do container como 100% da largura*/
-    top: 0; /* Posiciona o container no topo da tela */
-    left: 0; /* Posiciona o container na esquerda da tela */
-    margin: 0%;
+body{
+    background-image: url(imagens/wallpaper.jpg);
+    background-color: black;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    background-attachment: fixed;
 }
-
-/* Cabeçalho */
+.Container-Principal{
+    display: flex;
+    justify-content: center;
+}
 .Cabecalho {
     background-color: black; /* Define a cor de fundo do cabeçalho como preto */
     display: flex; 
@@ -24,7 +24,7 @@ Container-Principal {
 }
 
 .Titulo {
-    font-size: 30px; /* Define o tamanho da fonte  30px */
+    font-size: 30px; /* Define o tamanho da fonte do título como 30px */
 }
 
 /* Carrinho e Login */
@@ -72,93 +72,68 @@ Container-Principal {
     margin: 0; /* Remove a margem superior e inferior do texto do usuário */
     text-align: center; /* Alinha o texto do usuário no centro */
 }
-.Primeira-sessao{
-    display: flex;
-    flex-direction: row;
-    margin: 11% 0% 2% 0%;
-    justify-content: space-around;
-}
-.imagens{
-    display: flex;
-    flex-direction: row;
-}
-.imagens1{
-    display: flex;
-    flex-direction: column;
-}
-.imagens1 img{
-    width: 20;
-    margin: 2%;
-}
-.Segunda-sessao{
-    display: flex;
-    flex-direction: column;
-    color: #000000;
+
+.Card-Registro{
+background-color: black;
+height: 75vh;
+width: 25%;
+display: flex;
+flex-direction: column;
+position: static;
+align-self: center;
+margin-top: 100px;
+margin-bottom: 50px;
+align-content: center;
+align-items: center;
+border: 3px solid #858585;
+box-shadow: 
+0 0 5px #6d6d6d,
+0 0 10px #373737, 
+0 0 20px #1b1b1b; 
+border-radius: 25px;
 }
 
-.botao-tamanho {
-    width: 40px; /* Largura do botão */
-    height: 40px; /* Altura do botão */
-    background-color: #D9D9D9; /* Cor de fundo */
-    border: 2px solid black; /* Borda */
-    display: inline-block; /* Exibe como bloco inline */
-    text-align: center; /* Centraliza o texto */
-    line-height: 40px; /* Alinha o texto verticalmente */
-    margin: 5px; /* Espaçamento entre os botões */
-    cursor: pointer; /* Cursor de mão ao passar o mouse */
-  }
-.botao-tamanho input[type="radio"] {
-    display: none; /* Esconde o botão de rádio padrão */
-}
-.botao-tamanho input[type="radio"]:checked + label{
-    background-color: #D9D9D9; /* Cor de fundo */
-    padding: 11px;
-    margin-left: -1px;
-    cursor: pointer; /* Cursor de mão ao passar o mouse */
-    border: groove red 4px;
+.Card-Registro h1{
+color: white;
+font-size: 50px;
+margin-top: 25px;
 }
 
-.botoes{
-    display: flex;
-    flex-direction: row;
+.Input-Form{
+display: flex;
+margin-top: 25px;
+margin-bottom: 25px;
+width: 200px;
+height: 10px;
+border-radius: 5px;
+border: 1px solid black;
+padding: 10px;
+font-size: 15px;
+outline: none;
 }
 
 
-.rodape{
+.checkbox{
+    
+    color: white;
+}
+
+.checkbox label{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    text-align: center;
-    margin: 0%;
-    left: 0;
-    bottom: 0;
-    width: 100%; /* Faz o footer ocupar toda a largura da página */
-    background-color: #000000; /* Define a cor de fundo do footer */
+}
+
+.bn15 {
+    background-color: #ffffff00;
+    font-family: lato,sans-serif;
+    font-weight: bold;
+    font-size: 1em;
+    letter-spacing: 0.1em;
+    text-decoration: none;
     color: #ffffff;
-  }
-  .sobre{
-      width: 20%;
-  }
-  .contato img{
-      width: 40%;
-      padding: 2%;
-  }
-  .redes{
-      width: 95%;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-  }
-  h3{
-      text-align: center;
-  }
-  .rodape p{
-     text-align: center; 
-  }
-  .MUTT-footer {
-      width: 10%; /* Define a largura da logo como 100px */
-      height: 10%; /* Define a altura da logo como 100px */
-      align-items: baseline;
-      margin: 2% 0% 0% 0%;
-      
+    display: inline-block;
+    padding: 10px 40px 10px 40px;
+    position: relative;
+    border: 3px solid #ffffff;
+    border-radius: 20px;
   }
