--- a/Tela-Registro/Tela-Registro.css
+++ b/Tela-Registro/Tela-Registro.css
@@ -196,3 +196,25 @@ outline: none;
 .href{
 color: rgb(121, 121, 250); /* Troca a cor do Link para ficar mais visível  */
 }
+.modalmsg {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+    color: #ffffff;
+}
+.conteudomsg {
+    background-color: #d61212;
+    margin: 15% auto; 
+    padding: 20px;
+    border-radius: 5px;
+    width: 70%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
