--- a/Tela-Registro/Tela-Registro.css
+++ b/Tela-Registro/Tela-Registro.css
@@ -197,24 +197,24 @@ outline: none;
 color: rgb(121, 121, 250); /* Troca a cor do Link para ficar mais visível  */
 }
 .modalmsg {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-    color: #ffffff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    top: 150px;
 }
 .conteudomsg {
-    background-color: #d61212;
+    background-color: #ff0000;
+    color: black;
+    font-weight: bold;
     margin: 15% auto; 
     padding: 20px;
-    border-radius: 5px;
-    width: 70%; 
+    border-radius: 15px; 
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    border: none;
 }
+.close:hover{
+    color: white;
+}
+
