--- a/Tela-Registro/Tela-Registro.css
+++ b/Tela-Registro/Tela-Registro.css
@@ -197,6 +197,7 @@ outline: none;
 color: rgb(121, 121, 250); /* Troca a cor do Link para ficar mais visível  */
 }
 .modalmsg {
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -242,7 +243,6 @@ color: rgb(121, 121, 250); /* Troca a cor do Link para ficar mais visível  */
 
 .close:hover{
     color: white;
-    
-
+    cursor: default;
 }
 
