--- a/Tela-carrinho/Tela-carrinho.css
+++ b/Tela-carrinho/Tela-carrinho.css
@@ -84,10 +84,13 @@ Container-Principal {
 
 .Primeira-sessao{
     width: 55vw;
-    margin: 10% 0% 0% 3%;
+    margin: 3% 0% 0% 3%;
     display: flex;
     flex-direction: column;
-    
+}
+
+.h1-mc {
+    font-size: 50px;
 }
 
 .produto-linha{
@@ -97,8 +100,50 @@ Container-Principal {
 
 .Segunda-sessao{
     width: 55vw;
-    margin: 10% 0% 0% 3%;
+    margin: 3% 0% 0% 3%;
     display: flex;
     flex-direction: column;
-    
+}
+
+.h1-rc {
+    font-size: 50px;
+}
+
+.button {
+    background-color: #4CAF50; 
+    border: none; 
+    color: rgb(255, 255, 255); 
+    padding: 15px 32px; 
+    text-align: center;
+    text-decoration: none;
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 4px 2px;
+    cursor: pointer; 
+    border-radius: 8px; 
+    transition: background-color 0.3s; 
+}
+
+.button:hover {
+    background-color: #45a049; 
+}
+
+
+.button-azul {
+    background-color: #2c4bf7; 
+    border: none; 
+    color: rgb(255, 255, 255); 
+    padding: 15px 32px; 
+    text-align: center;
+    text-decoration: none;
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 4px 2px;
+    cursor: pointer; 
+    border-radius: 8px; 
+    transition: background-color 0.3s; 
+}
+
+.button-azul:hover {
+    background-color: #6c75f3; 
 }
