--- a/Tela-carrinho/Tela-carrinho.css
+++ b/Tela-carrinho/Tela-carrinho.css
@@ -165,3 +165,22 @@ Container-Principal {
     
 }
 
+.removerp {
+    background-color: #000000; 
+    border: none; 
+    color: rgb(255, 255, 255); 
+    padding: 15px 32px; 
+    text-align: center;
+    text-decoration: none;
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 4px 2px;
+    cursor: pointer; 
+    border-radius: 8px; 
+    transition: background-color 0.3s; 
+}
+
+.removerp:hover {
+    background-color: #2a2b2a; 
+}
+
